<resources>
    <string name="app_name">PhotoNotes</string>
    <string name="photo_view_description">Photo</string>
    <string name="note_text_description">Note</string>
    <string name="note_text_lines">4</string>
    <string name="new_button_label">New</string>
    <string name="back_button_label">Save and Return</string>
    <string name="delete_button_label">Delete</string>
    <string name="toast_no_activities">No activities for taking photoes</string>
    <string name="toast_no_such_photo">No such photo</string>
    <string name="zoomable_button_label">Zoomable</string>
</resources>
